<resources>
    <string name="crop">Crop Insurance</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="create_password">Create Password</string>
    <string name="retypepassword">Re-Enter Password</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="login_in">Login</string>
    <string name="create_account">Create Account</string>
    <string name="Back"><![CDATA[< Login]]></string>
    <string name="app_name">Crop Insurance</string>
    <string name="Name">Full Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>