<?xml version="1.0" encoding="utf-8"?>
  <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgapp"
    tools:context=".Login">


  <ImageView
      android:id="@+id/icon"
      android:layout_width="83dp"
      android:layout_height="62dp"
      android:layout_marginTop="50dp"
      android:src="@drawable/icon"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/crop"
      android:textColor="#000"
      android:layout_marginTop="20dp"
      android:textSize="32dp"
      android:visibility="visible"
      app:autoSizeTextType="uniform"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.497"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/icon"
      tools:text="Crop Insurance" />

  <EditText
      android:id="@+id/Email"
      android:layout_width="300dp"
      android:layout_height="40dp"
      android:layout_marginTop="28dp"
      android:background="@drawable/border"
      android:elevation="5dp"
      android:ems="10"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      android:paddingLeft="10dp"
      android:textAllCaps="true"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/title"
      android:autofillHints="yes" />

  <EditText
      android:id="@+id/password"
      android:layout_width="300dp"
      android:layout_height="40dp"
      android:layout_marginTop="20dp"
      android:background="@drawable/border"
      android:elevation="5dp"
      android:ems="10"
      android:hint="@string/password"
      android:inputType="textPassword"
      android:paddingLeft="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.495"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/Email"
      android:autofillHints="yes" />

  <Button
      android:id="@+id/loginBtn"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:background="@drawable/button"
      android:text="Login"
      android:textColor="#000"
      android:textSize="13sp"
      app:layout_constraintEnd_toEndOf="@+id/forgotPassword"
      app:layout_constraintStart_toStartOf="@+id/password"
      app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

  <TextView
      android:id="@+id/forgotPassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="8dp"
      android:gravity="center"
      android:text="@string/forgot_password"
      android:textColor="@color/colorPrimaryDark"
      android:visibility="visible"
      app:layout_constraintEnd_toEndOf="@+id/password"
      app:layout_constraintTop_toBottomOf="@+id/password"
      tools:text="Forget Password ?" />

  <TextView
      android:id="@+id/createText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="16dp"
      android:gravity="center"
      android:text="Signup >"
      android:textColor="#000"
      android:textSize="18sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/loginBtn"
      app:layout_constraintHorizontal_bias="0.502"
      app:layout_constraintStart_toStartOf="@+id/loginBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>